Performance regression related to os::supports_monotonic_clock() on linux

XMLWordPrintable

    • b14
    • 12
    • b07
    • linux

      JDK-8211175 refactored the os::Linux code to os::Posix but in doing so it made inlinable definitions of supports_monotonic_clock and clock_gettime to become out-of-line definitions. That impacts time related calls and may contribute to unattributed startup regression in 12-b14.

            Assignee:
            David Holmes
            Reporter:
            David Holmes
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: