8217843: Performance regression related to os::supports_monotonic_clock() on linux

Reviewed-by: redestad, stuefe