src/hotspot/os/posix/os_posix.hpp
@@ -123,6 +123,11 @@ public:
 
 #ifdef SUPPORTS_CLOCK_MONOTONIC
 
+private:
+  // These need to be members so we can access them from inline functions
+  static int (*_clock_gettime)(clockid_t, struct timespec *);
+  static int (*_clock_getres)(clockid_t, struct timespec *);
+public:
   static bool supports_monotonic_clock();
   static int clock_gettime(clockid_t clock_id, struct timespec *tp);
   static int clock_getres(clockid_t clock_id, struct timespec *tp);
